--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 <body class="body">
   <main class="main">
     <section class="section">
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-yellow--RU/">RU</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-yellow--PL/">PL</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-yellow--UA/">UA</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-b--EN/">B</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-r--EN/">R</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-o--EN/">O</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-g--EN/">Gr</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-grey--EN/">G</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-white-grey--EN/">GA</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-w--EN/">W</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-p--EN/">P</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-pink--EN/">P</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-brown--EN/">B</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-yellow--RU/">RU</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-yellow--PL/">PL</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-yellow--UA/">UA</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-b--EN/">B</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-r--EN/">R</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-o--EN/">O</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-g--EN/">Gr</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-grey--EN/">G</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-white-grey--EN/">GA</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-w--EN/">W</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-p--EN/">P</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-pink--EN/">P</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-brown--EN/">B</a></button>
       <h1 class="section--h1">Mark 12:28-31 (KJV)</h1> 
       <p class="section--paragraph">28. And one of the scribes came, and having heard them reasoning together, and perceiving that he had answered them well, asked him, Which is the first commandment of all?</p>
       <p class="section--paragraph">29. And Jesus answered him, The first of all the commandments is, Hear, O Israel; The Lord our God is one Lord:</p>
