--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-o--EN/">O</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-g--EN/">Gr</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-grey--EN/">G</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-white-grey--EN/">GA</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-white-grey--EN/">WG</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-w--EN/">W</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-p--EN/">P</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-pink--EN/">P</a></button>
