--- a/index.html
+++ b/index.html
@@ -13,24 +13,34 @@
 <body class="body">
   <main class="main">
     <section class="section">
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-yellow--RU/">RU</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-yellow--PL/">PL</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-yellow--UA/">UA</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-b--EN/">B</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-r--EN/">R</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-o--EN/">O</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-g--EN/">Gr</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-grey--EN/">G</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-white-grey--EN/">WG</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-w--EN/">W</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-p--EN/">P</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-pink--EN/">P</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-brown--EN/">B</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-yellow--RU/">RU</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-yellow--PL/">PL</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-yellow--UA/">UA</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-b--EN/">B</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-r--EN/">R</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-o--EN/">O</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-g--EN/">Gr</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-grey--EN/">G</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-grey--EN/">WG</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-w--EN/">W</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-p--EN/">P</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-pink--EN/">P</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-brown--EN/">B</a></button>
       <h1 class="section--h1">Mark 12:28-31 (KJV)</h1> 
       <p class="section--paragraph">28. And one of the scribes came, and having heard them reasoning together, and perceiving that he had answered them well, asked him, Which is the first commandment of all?</p>
       <p class="section--paragraph">29. And Jesus answered him, The first of all the commandments is, Hear, O Israel; The Lord our God is one Lord:</p>
       <p class="section--paragraph">30. <span class="section--bold">And thou shalt love the Lord thy God with all thy heart</span>, <span class="section--bold">and with all thy soul</span>, <span class="section--bold">and with all thy mind</span>, <span class="section--bold">and with all thy strength</span>: this is the first commandment.</p>
       <p class="section--paragraph">31. And the second is like, namely this, <span class="section--bold">Thou shalt love thy neighbour as thyself</span>. There is none other commandment greater than these.</p>
+    </section>
+  </main>
+  <div class="div__underline--lightgrey"></div>
+  <main class="main">
+    <section class="section">
+      <a class="section--link" href="https://www.facebook.com/nikita.rysiev.3/posts/144801687498428">
+        <p class="section--bold">
+          (Link to video: a little about love, __ what is it?) 
+        </p>
+      </a>
     </section>
   </main>
 </body>
