--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-o--EN/">O</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-g--EN/">Gr</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-grey--EN/">G</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--EN/">SGWAq</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-grey-aqua--EN/">GA</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-grey--EN/">WG</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-sgwaq--EN/">SGWAq</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-w--EN/">W</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-p--EN/">P</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-pink--EN/">P</a></button>
