--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-yellow--RU/">RU</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-yellow--PL/">PL</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-yellow--UA/">UA</a></button>
+      <button class="section__button--underscore">__</button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-b--EN/">B</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-r--EN/">R</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-o--EN/">O</a></button>
